# ZephyrOnSTM32L073Nucleo

./: CMakeLists.txt  README.md  prj.conf
inc/: gpio.hpp  swIrq.hpp  threadLed.hpp  threads.hpp
src/: gpio.cpp  main.c  main.cpp  swIrq.cpp  threadLed.cpp  threads.cpp
